# wraith

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/codeguard-api-guard/: Cargo.toml
crates/codeguard-api-guard/src/: context_match.rs  introspect.rs  lib.rs
crates/codeguard-ast/: Cargo.toml
crates/codeguard-ast/benches/: parse_bench.rs
crates/codeguard-ast/src/: extract.rs  import_graph.rs  lib.rs  line_index.rs  parser.rs  symbols.rs  tests.rs
crates/codeguard-cli/: Cargo.toml
crates/codeguard-cli/src/: main.rs
crates/codeguard-core/: Cargo.toml
crates/codeguard-core/src/: config.rs  diagnostic.rs  lib.rs  noqa.rs  reporter.rs  rules.rs  tests.rs
crates/codeguard-phantom/: Cargo.toml
crates/codeguard-phantom/src/: cache.rs  checker.rs  known_packages.rs  lib.rs
crates/codeguard-vibe/: Cargo.toml
crates/codeguard-vibe/src/: lib.rs  project.rs  taint.rs
python/codeguard/: Cargo.toml
python/codeguard/src/: lib.rs
python/wraith/: Cargo.toml
python/wraith/src/: lib.rs
scripts/: benchmark_ai_repos.py
tests/fixtures/: api_hallucination.py  api_kwargs.py  edge_cases.py  sample_bad.py
