[package]
name = "codeguard-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
