[package]
name = "codeguard-phantom"
version.workspace = true
edition.workspace = true

[dependencies]
codeguard-core = { workspace = true }
codeguard-ast = { workspace = true }
tree-sitter = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
