[package]
name = "codeguard-python"
version.workspace = true
edition.workspace = true

[lib]
name = "codeguard"
crate-type = ["cdylib"]

[dependencies]
codeguard-core = { workspace = true }
codeguard-ast = { workspace = true }
codeguard-api-guard = { workspace = true }
codeguard-phantom = { workspace = true }
codeguard-vibe = { workspace = true }
pyo3 = { workspace = true }
serde_json = { workspace = true }
